# cmakelearn

./: README.md
1/: CMakeLists.txt  CMakeLists.txt~
1/src/: main.cpp
2/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  hello  main.c~
3/: CMakeLists.txt~
3/src/: CMakeLists.txt~  main.c
demo1/: CMakeLists.txt  main.cc
demo2/: CMakeLists.txt  main.cc
demo3/: CMakeLists.txt
demo4/: CMakeLists.txt
demo4/math/: Makefile  cmake_install.cmake
demo5/: CMakeLists.txt  main.cc
demo5/math/: CMakeLists.txt  Makefile  cmake_install.cmake
demo6/: CMakeLists.txt
demo7/: CMakeLists.txt  config.h.in
demo8/: CMakeLists.txt  main.cc
demo8/math/: MathFunctions.cc  MathFunctions.h
t1/: main.c
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.c~
t3/lib/: CMakeLists.txt  hello.c
t4/src/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.c
