PROJECT(HELLO)

ADD_SUBDIRECTORY(src bin)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${PROJECT_SOURCE_DIR})

INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)

INSTALL(PROGRAMS runhello.sh DESTINATION bin)

INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
